    Also updated the fn:path() function.
  * Item::isSeekable API extension for streamable content (xs:string and xs:base64Binary).
  * Implemented the latest W3C specification for the group by clause
  * Added ft:tokenize-nodes() function to full-text module
  * New XQuery 3.0 functions
    - fn:parse-xml-fragment#1
  * Added support for transient maps to the
    http://www.zorba-xquery.com/modules/store/data-structures/unordered-map module.
  * Added support for fragments to fn:path
  * Positional pagination support for collections
  * Incremental maintenance for general indexes.
	
Optimizations:
  * Small optimization of comparison operations.
  * Improved hoist rule: tighter hoisting of expressions (also fixes bug #967428,
    which is only a performance bug)
  * Optimized hash sets used by fn:distinct-values and nodes-distinct
  * Optimized hash function used for nodes (also fixes bug #1010051)
  * No more serialization of compiler expressions.
  * Big rewrite of plan serializer internals, resulting in big performance improvement.
  * Avoid (if possible) treat expr for checking that the value of a non-external
    global variable conforms to the type declaration of the vatiable.
  * Streaming execution for tumbling windows (also fixes bug #1010051).

Bug Fixes/Other Changes:
  * Fixed bug #1025622 (Incorrect JSON serialization of supplementary plane code points)
  * Fixed bug #1016606 (DOCTYPE in the input of the parse-fragment function)
  * Fixed bug #1002993 (bug during revalidation after update; improper condition
    for calling TypeOps::get_atomic_type_code() from
    SchemaValidatorImpl::isPossibleSimpleContentRevalImpl())
  * Fixed bug #867357 (Improved parser error messages)
  * Fixed bug #1026379 ("q" flag for fn:replace() is ignored)
  * Fixed bug #932314 (non-comparable values must be treated as distinct by
    fn:distinct-values)
  * Fixed bug #1015580 (Add base64_streambuf / replace inefficient base64 code)